--- a/pv-task/src/index.css
+++ b/pv-task/src/index.css
@@ -4,27 +4,27 @@
 
 @layer components {
   .btn-blue {
-    @apply bg-blue-800 px-4 py-2 rounded-lg text-white;
+    @apply bg-blue-800 px-4 py-2 rounded-lg text-white hover:bg-blue-600;
   }
 
   .btn-white {
-    @apply bg-white px-4 py-2 rounded-lg text-gray-400;
+    @apply bg-white px-4 py-2 rounded-lg text-gray-400 hover:bg-blue-600;
   }
 
   .btn-active {
-    @apply text-red-600;
+    @apply text-red-600 border-white border-2 hover:border-red-600 p-1 rounded;
   }
 
   .btn-inactive {
-    @apply text-green-600;
+    @apply text-green-600 border-white border-2 hover:border-green-600 p-1 rounded;
   }
 
   .btn-edit {
-    @apply text-black;
+    @apply text-black border-white border-2 hover:border-black p-1 rounded;
   }
 
   .btn-delete {
-    @apply text-red-600 ml-4;
+    @apply text-red-600 ml-4 border-white border-2 hover:border-red-600 p-1 rounded;
   }
 
   .search-input-header {
@@ -44,32 +44,33 @@
   }
 
   .mini-image {
-    @apply w-12 h-12 rounded-full border-white border-2;
+    @apply w-6 h-6 md:w-12 md:h-12 rounded-full border-white border-2;
   }
 
   .product-type {
-    @apply text-gray-400;
+    @apply text-gray-400 ;
   }
 
-  table {
-    border-collapse: separate;
-    border-spacing: 0 10px;
-  }
+}
 
-  td:first-child {
-    border-left-style: solid;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
 
-  td:last-child {
-    border-right-style: solid;
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px;
-  }
+table {
+  border-collapse: separate;
+  border-spacing: 0 10px;
+}
 
-  td {
-    text-align: center;
-  }
+td:first-child {
+  border-left-style: solid;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
 
+td:last-child {
+  border-right-style: solid;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+td, th {
+  text-align: left;
 }
